# Dogfight

./: CMakeLists.txt  DStarLite.cpp  Engine.cpp  Engine.h  FSM.cpp  FSM.h  Global.cpp  Global.h  GraphBuilder.cpp  GraphBuilder.h  MPCController.cpp  MPCController.h  Map.cpp  Map.h  Plane.cpp  Plane.h  main.cpp
.github/workflows/: ci.yml
Assets/shaders/: fog.fs
Sims/: DStarLite.cpp  DStarLite.h  FSM.cpp  FSM.h  GraphBuilder.cpp  MPCController.cpp  MPCController.h  Map.cpp  Map.h  Plane.cpp  Plane.h
State/: GameOverState.cpp  GameOverState.h  MenuState.cpp  MenuState.h  SimsState.cpp  SimsState.h  State.cpp  State.h
shaders/: fog.vs
src/: Global.cpp  Global.h  main.cpp
src/Collision/: GJK.cpp  GJK.h
src/Engine/: Engine.cpp  Engine.h
src/Entities/Plane/: Plane.cpp  Plane.h
src/Entities/Plane/AIState/Base/: AIState.cpp  AIState.h
src/Entities/Plane/AIState/Type/: EvasionState.cpp  EvasionState.h  FuelState.cpp  FuelState.h  PatrolState.cpp  PatrolState.h  PursuitState.cpp  PursuitState.h  TakeOffState.cpp  TakeOffState.h
src/Entities/Plane/Control/: MPCController.cpp  MPCController.h
src/Entities/Plane/Type/: SelfPlane.cpp  SelfPlane.h
src/Navigation/: AStar.cpp  AStar.h  DStarLite.cpp  DStarLite.h  Dijkstra.cpp  Dijkstra.h
src/WindowState/Base/: State.cpp  State.h
src/WindowState/Type/: GameOverState.cpp  GameOverState.h  MenuState.cpp  MenuState.h  SimsState.cpp  SimsState.h
src/World/: GraphBuilder.cpp  GraphBuilder.h  Map.cpp  Map.h
